react-app/src/components/Dashboard/Dashboard.css
.dashboard.body {
    padding-bottom: 25px;
}

.dashboard__nav {
    background-color: rgb(227,55,0);
    text-align: center;
    display: flex;
    justify-content: center;
    gap: 40px;
    box-shadow: 0 0 10px rgb(219, 219, 219);

}


.dashboard__nav__buttons {
    background-color: transparent;
    border: none;
    color: white;
    font-size: 18px;
    padding: 10px;

}

.dashboard__nav__buttons > h3 {
    font-weight: 400;
}


.dashboard__nav__buttons.true {
    background-color: transparent;
    border-bottom: 8px solid white;
    padding-bottom: 2px;
}


.booking__card {
    background-color: transparent;
    border: none;
}


.card__outer-container {
    width: 85%;
    margin: auto;
    padding-top: 25px;
    display: flex;
    justify-content: center;
}

.card__flex {
    display: flex;
    gap: 25px;
    /* flex-flow: row wrap; */
    flex-wrap: wrap;
    justify-content: center;
}



#booking-confirmed__container {
    display: flex;
    /* flex-direction: column; */
    /* justify-content: center; */
    align-items: center;
    margin-top: 40px;
    gap: 10px;
    color:rgb(114, 114, 114);
}

#booking-passed__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 10px;
    color:rgb(114, 114, 114);
}

#leave-review__message {
    /* color:rgb(82, 82, 169); */
    color: rgb(241, 23, 23);
    font-size: 12px;
    font-weight: 700;
    margin: 0;
}

#leave-review__message::before {
    margin: 0;

}

#booking-confirmed__icon {
    color: rgb(48, 174, 43);
    font-size: 17px;
}

#booking-unconfirmed__icon {
    color: rgb(241, 23, 23);
    font-size: 17px;
}

div#artist__card div#booking___info-container {
    padding: 5px 20px 20px 20px;

}


#booking__date-and-time {
    text-align: left;
    font-size: 14px;
}


#dashboard__booking__title {
    text-align: left;
    font-size: 17px;

    margin: 10px 0;
    padding-bottom: 5px;
    border-bottom: 1px solid rgb(230, 230, 230);
}

#booking__date, #booking__time {
    font-weight: 700;
}

.less-margin {
    margin: 10px 0;
}


#review-preview {
    height: 70px;
    /* white-space: nowrap; */
}

.review-card__info {
    padding: 5px 10px 10px 10px;
}

.review-card__info p#review-preview {
    font-size: 13px;
    color: rgb(74, 74, 74);
    font-weight: 300;
}

#review__date {
    font-size: 12px;
    color: rgb(74, 74, 74);
}

.line-clamp {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 5;

}


#artist__card-title {
    padding-bottom: 10px;
    border-bottom: 1px solid rgb(230, 230, 230);
}

